--- a/app/assets/stylesheets/landing_page.css
+++ b/app/assets/stylesheets/landing_page.css
@@ -1,19 +1,48 @@
 .landing-page-container {
   margin: 8px;
+  background: white; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(white, #D3D8E8); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(white, #D3D8E8); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(white, #D3D8E8); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(white, #D3D8E8); /* Standard syntax */
 }
+
 
 .left-page {
   width: 50%;
+  margin-left: 50px;
+
+}
+
+.landing-page-background-photo {
+  width: 360px;
+  height: 450px;
 }
 
 .right-page {
   width: 50%;
 }
 
-#email {
-  width: 506px;
+.signup-title {
+  font-size: 48px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.auth-control {
-  width: 250px;
+.signup-subtitle {
+  font-size: 20px;
+}
+
+.signup-subtitle-inner-container {
+  margin-bottom: 20px;
+}
+
+.logo-text {
+  color: white;
+  position: absolute;
+  left: 50px;
+  top: 20px;
+  font-size: 27px;
+
+
 }
