--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -13,10 +13,45 @@
   position: relative;
   left: 15px;
   top: 50%;
+  width: 50px;
   transform: translateY(-37%);
 }
 
 .navbar-right {
   position: relative;
-  right: 0px;
+  right: 90px;
+  width: 320px;
+}
+
+.login-control {
+  width: 150px;
+  border: 0px;
+  box-shadow: 2px 5px 2px rgba(0, 0, 0, .1);
+  height: 20px;
+  padding-left: 5px;
+}
+
+.auth-input {
+  margin: 5px;
+}
+
+.auth-button {
+  background-color: #5D76AA;
+  color: white;
+  font-family: helvetica, arial, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 13px;
+  border:0px;
+  /*border-top: 1px solid #999;*/
+  border-bottom-color: #888;
+  box-shadow: 2px 5px 2px rgba(0, 0, 0, .1);
+}
+
+.sub-auth-button {
+  margin-left: 5px;
+}
+
+.demo-auth-button {
+  margin-right: 52px;
 }
