--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,25 +3,10 @@
 <head>
   <title>FriendFinity</title>
 
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <%= stylesheet_link_tag 'application', media: 'all' %>
-  <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"> -->
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKoAy6rkH7LN5KwoNWQIIfC-QJ5IkPakc"
-  type="text/javascript">
-  </script> -->
-
-  <!-- <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"> -->
-
-  <!-- <script
-    type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js">
-  </script> -->
-
-
-
 </head>
 
 <body class="body">
