--- a/app/assets/stylesheets/newsfeed.css
+++ b/app/assets/stylesheets/newsfeed.css
@@ -1,8 +1,10 @@
 .status-update-container {
   background-color: white;
   padding: 10px;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, .1);
+  /*box-shadow: 0px 0px 2px rgba(0, 0, 0, .1);*/
   margin-bottom: 10px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, .1);
+
 }
 
 .status-profile {
@@ -18,4 +20,8 @@
 
 .status:focus {
   outline-width: 0;
+}
+
+.newsfeed {
+  width: 600px;
 }
